--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <script src="https://code.createjs.com/1.0.0/tweenjs.min.js"></script>
+        <script type="text/javascript" src="./dat.gui/build/dat.gui.js"></script>
+        <script type="text/javascript" src="./stat.js/build/stats.js"></script>
         <script type="module" src="./main.js"></script>
         
             
